--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.4",
@@ -17,11 +19,11 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
     "@prisma/client": "5.16.2",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.11",
-    "fastify": "^4.28.1",
-    "fastify-type-provider-zod": "^2.0.0",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
   }
